# cc_mini_toolchain

./: .bazelrc  README.md
.github/workflows/: build.yaml
toolchains/toolchains/: cc_mini_toolchain.bzl  toolchains.MODULE.bazel
toolchains/toolchains/gcc-armv7l-linux-ulibc-luckfox/: BUILD  toolchains.MODULE.bazel
